Followup from previous commit within the hitTest and selectionBoundingBox methods

BUG:280711